@@ -6,4 +6,5 @@ cmake .. -DCMAKE_CXX_FLAGS="-W -Wall" \
 	-DCMAKE_BUILD_TYPE=Debug \
 	-DCMAKE_INSTALL_PREFIX=/usr/local \
 	-DSTATIC_DRUMSTICK=YES \
+	-DUSE_DBUS=YES \
 	-DENABLE_PCH=NO $*
