@@ -29,21 +29,26 @@ INCLUDE_DIRECTORIES(
     \${CMAKE_CURRENT_SOURCE_DIR}/include
 )
 
+ADD_DEFINITIONS(-DRTKIT_SUPPORT)
+
 # drumstick-file library
 
 SET(drumstick-file_QTOBJ_SRCS
     include/qsmf.h
     include/qwrk.h
+    include/qove.h
 )
 
 SET(drumstick-file_HEADERS
     include/qsmf.h
     include/qwrk.h
+    include/qove.h
 )
 
 SET(drumstick-file_SRCS
     src/qsmf.cpp
     src/qwrk.cpp
+    src/qove.cpp
 )
 
 QT4_WRAP_CPP(drumstick-file_MOC_SRCS \${drumstick-file_QTOBJ_SRCS})
@@ -72,6 +77,7 @@ SET(drumstick-alsa_QTOBJ_SRCS
 )
 
 SET(drumstick-alsa_HEADERS
+    include/macros.h
     include/alsaclient.h
     include/alsaevent.h
     include/alsaport.h
@@ -93,7 +99,7 @@ SET(drumstick-alsa_SRCS
 )
 
 QT4_WRAP_CPP(drumstick-alsa_MOC_SRCS \${drumstick-alsa_QTOBJ_SRCS})
-   
+
 ADD_LIBRARY(drumstick-alsa 
     \${drumstick-alsa_MOC_SRCS}
     \${drumstick-alsa_SRCS} 
@@ -101,7 +107,7 @@ ADD_LIBRARY(drumstick-alsa
 )
 
 SET_TARGET_PROPERTIES(drumstick-alsa PROPERTIES COMPILE_FLAGS -fPIC)
-    
+
 TARGET_LINK_LIBRARIES(drumstick-alsa
     \${QT_LIBRARIES}
     \${ALSA_LIBS}
